Issue: #FT-1714 SubTicket: # Component: Changes: 1. Change width on small mobile device

--- a/TripfinderWeb/TripfinderWeb/Global/Css/detailView-contact.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/detailView-contact.less
@@ -49,6 +49,10 @@
 			font-size: 13px;
 			cursor: pointer;
 
+			@media (max-width: 375px) {
+				max-width:110px;
+			}
+
 			&.selected {
 				background-color: #000000;
 				color: #FFFFFF;
